# gamin

./: Makefile.am  Makefile.in  acinclude.m4  aclocal.m4  config.h.in  configure  configure.in  gamin.pc.in  gamin.spec  gamin.spec.in
doc/: Makefile  Makefile.am  Makefile.in  apibuild.py  callbacks.fig  client_server.fig  desc  gamin-refs.xml  server_structs.fig  site.xsl
doc/.svn/: entries
doc/.svn/prop-base/: apibuild.py.svn-base
doc/.svn/text-base/: gamin-api.xml.svn-base  gamin.html.svn-base  news.html.svn-base  news.xsl.svn-base
lib/: Makefile.am  Makefile.in  gam_error.h  gam_event.h
libgamin/: Makefile.am  Makefile.in  TODO  gam_api.c  gam_data.c  gam_data.h  gam_error.c  gam_event.c  gam_fork.c  gam_fork.h  gam_protocol.h  gamin.c  gamin_sym.version
python/: Makefile.am  Makefile.in  gamin.c
python/tests/: Makefile.am  Makefile.in
server/: Makefile.am  Makefile.in  gam_channel.c  gam_channel.h  gam_conf.c  gam_conf.h  gam_connection.c  gam_connection.h  gam_debugging.c  gam_debugging.h  gam_dnotify.c  gam_dnotify.h  gam_eq.c  gam_eq.h  gam_excludes.c  gam_excludes.h  gam_fs.c  gam_fs.h  gam_hurd_mach_notify.c  gam_hurd_mach_notify.h  gam_inotify.c  gam_inotify.h  gam_kqueue.c  gam_kqueue.h  gam_listener.c  gam_listener.h  gam_node.c  gam_node.h  gam_pidname.c  gam_pidname.h  gam_poll_basic.c  gam_poll_basic.h  gam_poll_dnotify.c  gam_poll_dnotify.h  gam_poll_generic.c  gam_poll_generic.h  gam_server.c  gam_server.h  gam_subscription.c  gam_subscription.h  (+13 more)
tests/: Makefile.am  Makefile.in  testing.c
tests/result/: 1  10  11  3  5  7
tests/result/.svn/: entries
tests/result/.svn/text-base/: 2.svn-base  4.svn-base  6.svn-base  8.svn-base  9.svn-base
tests/scenario/: 1.tst  4.tst  6.tst  7.tst  8.tst  9.tst
tests/scenario/.svn/: entries
tests/scenario/.svn/text-base/: 10.tst.svn-base  11.tst.svn-base  2.tst.svn-base  3.tst.svn-base  5.tst.svn-base
